--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "app-js",
-	"version": "0.0.0",
+	"name": "@fiddleplum/app-js",
+	"version": "1.0.0",
 	"description": "AppJS",
-	"private": true,
+	"private": false,
 	"main": "src/index.js",
 	"repository": {
 		"type": "git",
