--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,16 @@
 {
 	"extends": "standard",
 	"rules": {
+		"brace-style": ["error", "stroustrup"],
 		"indent": ["error", "tab"],
 		"no-tabs": "off",
+		"operator-linebreak": "off",
 		"semi": ["error", "always"],
 		"space-before-function-paren": ["error", {
 			"anonymous": "always",
 			"asyncArrow": "always",
 			"named": "never"
 		}],
-		"brace-style": ["error", "stroustrup"],
 		"yoda": "off"
 	},
 	"env" : {
